# serde-redes

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: test.yaml
serde-ast/: Cargo.toml  README.md
serde-ast/examples/: ast.rs
serde-ast/src/: ast.rs  lib.rs  op.rs  ser.rs
serde-ast/tests/: json_prop.rs  to_ast_from_ast.rs
serde-metadata/: Cargo.toml
serde-metadata-derive/: Cargo.toml
serde-metadata-derive/src/: lib.rs
serde-metadata/src/: lib.rs
serde-redes/: Cargo.toml
serde-redes/src/: lib.rs
