[workspace]
members = ["serde-ast", "serde-metadata", "serde-metadata-derive", "serde-redes"]
resolver = "2"

[workspace.metadata.crane]
name = "serde-redes-workspace"

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tinybeachthor/serde-redes"
homepage = "https://github.com/tinybeachthor/serde-redes"

[workspace.dependencies]
serde = "1"
serde_json = "1"
thiserror = "1"
quickcheck = "1"
indexmap = "2.6.0"
darling = "0.20"
quote = "1"
syn = "2"
proc-macro2 = "1"
