[package]
name = "serde-ast"
version = "0.1.0"
edition = "2021"
description = "An AST representation for serde serialization"
categories = ["encoding"]
keywords = ["serde", "serialization", "ast"]
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
quickcheck = { workspace = true }
