[package]
name = "serde-metadata-derive"
version = "0.1.0-alpha.1"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
